add prompt route
