# app/routes/chat.py
@@ -8,9 +8,10 @@ from app.schemas.chat import (ChatSchema,
                                    CreateMessageResponse, DeleteChatResponse, 
                                    GetChatResponse, 
                                    GetMessagesResponse, 
-                                   MessageSchema
+                                   MessageSchema, PromptResponse, PromptSchema
                                    )
 import logging
+import ollama
 import os
 
 
@@ -35,14 +36,20 @@ swaggerui_blueprint = get_swaggerui_blueprint(
 root_router_pb = Blueprint("RootRouter",__name__)
 chat_router_pb = Blueprint("ChatRouter",__name__)
 message_router_pb = Blueprint("MessageRouter",__name__)
+prompt_router_pb = Blueprint("promptRouter",__name__)
+
 
 root_router_pb_api =Api(root_router_pb)
 chat_router_pb_api = Api(chat_router_pb)
 message_router_pb_api =Api(message_router_pb)
+prompt_router_pb_api =Api(prompt_router_pb)
+
 
 # Register Swagger UI blueprint
 chat_router_pb.register_blueprint(swaggerui_blueprint)
 message_router_pb.register_blueprint(swaggerui_blueprint)
+prompt_router_pb.register_blueprint(swaggerui_blueprint)
+
 
 
 
@@ -52,6 +59,7 @@ class RootRouter(Resource):
     def get(self):
         """ return all chats """
         try:
+            # return Response(stream_response(),content_type="text/plain")
             return custom_response({"message": "Hello from our flask chat app"}, 200)
         except Exception as e:
             logging.error(f"Root error: {e}")
@@ -123,6 +131,29 @@ class MessageRouterGet(Resource):
             return custom_response({"error": "Internal Server Error"}, 500)
 
 
+class PromptRouterPost(Resource):
+    """ handle Prompt """
+    @validate_api_key
+    @valiate_request_body(PromptSchema)
+    def post(self):
+        """ handle prompt completion """
+        try:
+            data = PromptSchema(**request.json)
+            
+            answer = ollama.chat(model='gemma:2b', messages=[
+            {
+                'role': 'user',
+                'content': data.prompt,
+            },
+            ])
+            response_data = PromptResponse(answer=answer['message']['content']).model_dump_json()
+            return custom_response(response_data, 200) 
+
+        except Exception as e:
+            logging.error(f"Get messages error: {e}")
+            return custom_response({"error": "Internal Server Error"}, 500)
+
+
 class MessageRouterPost(Resource):
     """ Main Message Router to handle Message POST ops """
     @validate_api_key
@@ -156,3 +187,5 @@ chat_router_pb_api.add_resource(ChatRouterDelete, '/chat/<int:chat_id>', methods
 message_router_pb_api.add_resource(MessageRouterGet, '/message/<int:chat_id>')
 message_router_pb_api.add_resource(MessageRouterPost, '/message/add-message')
 
+# prompt
+prompt_router_pb_api.add_resource(PromptRouterPost, '/prompt')
