# app/schemas/chat.py
@@ -2,10 +2,13 @@
 app schema for request body validation using pydantic
 """
 
-from pydantic import BaseModel
+from pydantic import BaseModel, Field
 
 class ChatSchema(BaseModel):
-    name: str 
+    name: str=  Field(default='John Doe',min_length=10)
+
+class PromptSchema(BaseModel):
+    prompt:str 
 
 class MessageSchema(BaseModel):
     senderName: str 
@@ -16,6 +19,9 @@ class MessageSchema(BaseModel):
 class CreateChatResponse(BaseModel):
     id: int
     name: str 
+
+class PromptResponse(BaseModel):
+    answer: str
 
 class GetChatResponse(BaseModel):
     error: bool
